--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,40 @@
-HELP.md
-target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# ===============================
+# Maven
+# ===============================
+/target/
+!**/src/main/**
+!**/src/test/**
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
+# ===============================
+# IntelliJ
+# ===============================
+.idea/
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# ===============================
+# OS
+# ===============================
+.DS_Store
+Thumbs.db
 
-### VS Code ###
-.vscode/
+# ===============================
+# Logs
+# ===============================
+*.log
+
+# ===============================
+# Maven Wrapper jar (NO ignorar)
+# ===============================
+!.mvn/wrapper/maven-wrapper.jar
+
+# ===============================
+# Docker local volumes
+# ===============================
+**/docker-data/
+
+# ===============================
+# Local environment files
+# ===============================
+.env
